# chainArt/api/article/v1/article.pb.go
@@ -26,19 +26,16 @@ type CreateArticleRequest struct {
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	UserId        int64    `protobuf:"varint,1,opt,name=UserId,proto3" json:"UserId,omitempty"`
-	CategoryId    int64    `protobuf:"varint,2,opt,name=CategoryId,proto3" json:"CategoryId,omitempty"`
-	Title         string   `protobuf:"bytes,3,opt,name=Title,proto3" json:"Title,omitempty"`
-	Intro         string   `protobuf:"bytes,4,opt,name=Intro,proto3" json:"Intro,omitempty"`
-	Cover         string   `protobuf:"bytes,5,opt,name=Cover,proto3" json:"Cover,omitempty"`
-	Content       string   `protobuf:"bytes,6,opt,name=Content,proto3" json:"Content,omitempty"`
-	ContentMd     string   `protobuf:"bytes,7,opt,name=ContentMd,proto3" json:"ContentMd,omitempty"`
-	Code          string   `protobuf:"bytes,8,opt,name=Code,proto3" json:"Code,omitempty"`
-	KeyWords      []string `protobuf:"bytes,9,rep,name=KeyWords,proto3" json:"KeyWords,omitempty"`
-	Sort          int64    `protobuf:"varint,10,opt,name=Sort,proto3" json:"Sort,omitempty"`
-	IsElite       int64    `protobuf:"varint,11,opt,name=IsElite,proto3" json:"IsElite,omitempty"`
-	Hits          int64    `protobuf:"varint,12,opt,name=Hits,proto3" json:"Hits,omitempty"`
-	ArticleStatus int64    `protobuf:"varint,13,opt,name=ArticleStatus,proto3" json:"ArticleStatus,omitempty"`
+	CategoryId    int64    `protobuf:"varint,1,opt,name=CategoryId,proto3" json:"CategoryId,omitempty"`
+	Title         string   `protobuf:"bytes,2,opt,name=Title,proto3" json:"Title,omitempty"`
+	Intro         string   `protobuf:"bytes,3,opt,name=Intro,proto3" json:"Intro,omitempty"`
+	Cover         string   `protobuf:"bytes,4,opt,name=Cover,proto3" json:"Cover,omitempty"`
+	Content       string   `protobuf:"bytes,5,opt,name=Content,proto3" json:"Content,omitempty"`
+	ContentMd     string   `protobuf:"bytes,6,opt,name=ContentMd,proto3" json:"ContentMd,omitempty"`
+	KeyWords      []string `protobuf:"bytes,7,rep,name=KeyWords,proto3" json:"KeyWords,omitempty"`
+	Sort          int64    `protobuf:"varint,8,opt,name=Sort,proto3" json:"Sort,omitempty"`
+	IsElite       int64    `protobuf:"varint,9,opt,name=IsElite,proto3" json:"IsElite,omitempty"`
+	ArticleStatus int64    `protobuf:"varint,10,opt,name=ArticleStatus,proto3" json:"ArticleStatus,omitempty"`
 }
 
 func (x *CreateArticleRequest) Reset() {
@@ -71,13 +68,6 @@ func (x *CreateArticleRequest) ProtoReflect() protoreflect.Message {
 // Deprecated: Use CreateArticleRequest.ProtoReflect.Descriptor instead.
 func (*CreateArticleRequest) Descriptor() ([]byte, []int) {
 	return file_api_article_v1_article_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *CreateArticleRequest) GetUserId() int64 {
-	if x != nil {
-		return x.UserId
-	}
-	return 0
 }
 
 func (x *CreateArticleRequest) GetCategoryId() int64 {
@@ -122,13 +112,6 @@ func (x *CreateArticleRequest) GetContentMd() string {
 	return ""
 }
 
-func (x *CreateArticleRequest) GetCode() string {
-	if x != nil {
-		return x.Code
-	}
-	return ""
-}
-
 func (x *CreateArticleRequest) GetKeyWords() []string {
 	if x != nil {
 		return x.KeyWords
@@ -146,13 +129,6 @@ func (x *CreateArticleRequest) GetSort() int64 {
 func (x *CreateArticleRequest) GetIsElite() int64 {
 	if x != nil {
 		return x.IsElite
-	}
-	return 0
-}
-
-func (x *CreateArticleRequest) GetHits() int64 {
-	if x != nil {
-		return x.Hits
 	}
 	return 0
 }
@@ -617,8 +593,8 @@ type ArticleResp struct {
 	IsElite       int64    `protobuf:"varint,11,opt,name=IsElite,proto3" json:"IsElite,omitempty"`
 	Hits          int64    `protobuf:"varint,12,opt,name=Hits,proto3" json:"Hits,omitempty"`
 	ArticleStatus int64    `protobuf:"varint,13,opt,name=ArticleStatus,proto3" json:"ArticleStatus,omitempty"`
-	CreateAt      int64    `protobuf:"varint,14,opt,name=CreateAt,proto3" json:"CreateAt,omitempty"`
-	UpdateAt      int64    `protobuf:"varint,15,opt,name=UpdateAt,proto3" json:"UpdateAt,omitempty"`
+	CreateAt      string   `protobuf:"bytes,14,opt,name=CreateAt,proto3" json:"CreateAt,omitempty"`
+	UpdateAt      string   `protobuf:"bytes,15,opt,name=UpdateAt,proto3" json:"UpdateAt,omitempty"`
 }
 
 func (x *ArticleResp) Reset() {
@@ -744,18 +720,18 @@ func (x *ArticleResp) GetArticleStatus() int64 {
 	return 0
 }
 
-func (x *ArticleResp) GetCreateAt() int64 {
+func (x *ArticleResp) GetCreateAt() string {
 	if x != nil {
 		return x.CreateAt
 	}
-	return 0
+	return ""
 }
 
-func (x *ArticleResp) GetUpdateAt() int64 {
+func (x *ArticleResp) GetUpdateAt() string {
 	if x != nil {
 		return x.UpdateAt
 	}
-	return 0
+	return ""
 }
 
 var File_api_article_v1_article_proto protoreflect.FileDescriptor
@@ -765,28 +741,24 @@ var file_api_article_v1_article_proto_rawDesc = []byte{
 	0x2f, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x0e,
 	0x61, 0x70, 0x69, 0x2e, 0x61, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x2e, 0x76, 0x31, 0x1a, 0x1c,
 	0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x61, 0x6e, 0x6e, 0x6f, 0x74,
-	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xe0, 0x02, 0x0a,
+	0x61, 0x74, 0x69, 0x6f, 0x6e, 0x73, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x22, 0xa0, 0x02, 0x0a,
 	0x14, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x52, 0x65,
-	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x16, 0x0a, 0x06, 0x55, 0x73, 0x65, 0x72, 0x49, 0x64, 0x18,
-	0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x06, 0x55, 0x73, 0x65, 0x72, 0x49, 0x64, 0x12, 0x1e, 0x0a,
-	0x0a, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x49, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28,
-	0x03, 0x52, 0x0a, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72, 0x79, 0x49, 0x64, 0x12, 0x14, 0x0a,
-	0x05, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x54, 0x69,
-	0x74, 0x6c, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x49, 0x6e, 0x74, 0x72, 0x6f, 0x18, 0x04, 0x20, 0x01,
-	0x28, 0x09, 0x52, 0x05, 0x49, 0x6e, 0x74, 0x72, 0x6f, 0x12, 0x14, 0x0a, 0x05, 0x43, 0x6f, 0x76,
-	0x65, 0x72, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x43, 0x6f, 0x76, 0x65, 0x72, 0x12,
-	0x18, 0x0a, 0x07, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x18, 0x06, 0x20, 0x01, 0x28, 0x09,
-	0x52, 0x07, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x12, 0x1c, 0x0a, 0x09, 0x43, 0x6f, 0x6e,
-	0x74, 0x65, 0x6e, 0x74, 0x4d, 0x64, 0x18, 0x07, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x43, 0x6f,
-	0x6e, 0x74, 0x65, 0x6e, 0x74, 0x4d, 0x64, 0x12, 0x12, 0x0a, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x18,
-	0x08, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x43, 0x6f, 0x64, 0x65, 0x12, 0x1a, 0x0a, 0x08, 0x4b,
-	0x65, 0x79, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x18, 0x09, 0x20, 0x03, 0x28, 0x09, 0x52, 0x08, 0x4b,
-	0x65, 0x79, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x18,
-	0x0a, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x12, 0x18, 0x0a, 0x07, 0x49,
-	0x73, 0x45, 0x6c, 0x69, 0x74, 0x65, 0x18, 0x0b, 0x20, 0x01, 0x28, 0x03, 0x52, 0x07, 0x49, 0x73,
-	0x45, 0x6c, 0x69, 0x74, 0x65, 0x12, 0x12, 0x0a, 0x04, 0x48, 0x69, 0x74, 0x73, 0x18, 0x0c, 0x20,
-	0x01, 0x28, 0x03, 0x52, 0x04, 0x48, 0x69, 0x74, 0x73, 0x12, 0x24, 0x0a, 0x0d, 0x41, 0x72, 0x74,
-	0x69, 0x63, 0x6c, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x0d, 0x20, 0x01, 0x28, 0x03,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x1e, 0x0a, 0x0a, 0x43, 0x61, 0x74, 0x65, 0x67, 0x6f, 0x72,
+	0x79, 0x49, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x03, 0x52, 0x0a, 0x43, 0x61, 0x74, 0x65, 0x67,
+	0x6f, 0x72, 0x79, 0x49, 0x64, 0x12, 0x14, 0x0a, 0x05, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x18, 0x02,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x54, 0x69, 0x74, 0x6c, 0x65, 0x12, 0x14, 0x0a, 0x05, 0x49,
+	0x6e, 0x74, 0x72, 0x6f, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x49, 0x6e, 0x74, 0x72,
+	0x6f, 0x12, 0x14, 0x0a, 0x05, 0x43, 0x6f, 0x76, 0x65, 0x72, 0x18, 0x04, 0x20, 0x01, 0x28, 0x09,
+	0x52, 0x05, 0x43, 0x6f, 0x76, 0x65, 0x72, 0x12, 0x18, 0x0a, 0x07, 0x43, 0x6f, 0x6e, 0x74, 0x65,
+	0x6e, 0x74, 0x18, 0x05, 0x20, 0x01, 0x28, 0x09, 0x52, 0x07, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e,
+	0x74, 0x12, 0x1c, 0x0a, 0x09, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x4d, 0x64, 0x18, 0x06,
+	0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x43, 0x6f, 0x6e, 0x74, 0x65, 0x6e, 0x74, 0x4d, 0x64, 0x12,
+	0x1a, 0x0a, 0x08, 0x4b, 0x65, 0x79, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x18, 0x07, 0x20, 0x03, 0x28,
+	0x09, 0x52, 0x08, 0x4b, 0x65, 0x79, 0x57, 0x6f, 0x72, 0x64, 0x73, 0x12, 0x12, 0x0a, 0x04, 0x53,
+	0x6f, 0x72, 0x74, 0x18, 0x08, 0x20, 0x01, 0x28, 0x03, 0x52, 0x04, 0x53, 0x6f, 0x72, 0x74, 0x12,
+	0x18, 0x0a, 0x07, 0x49, 0x73, 0x45, 0x6c, 0x69, 0x74, 0x65, 0x18, 0x09, 0x20, 0x01, 0x28, 0x03,
+	0x52, 0x07, 0x49, 0x73, 0x45, 0x6c, 0x69, 0x74, 0x65, 0x12, 0x24, 0x0a, 0x0d, 0x41, 0x72, 0x74,
+	0x69, 0x63, 0x6c, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x0a, 0x20, 0x01, 0x28, 0x03,
 	0x52, 0x0d, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x22,
 	0x45, 0x0a, 0x12, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65,
 	0x52, 0x65, 0x70, 0x6c, 0x79, 0x12, 0x2f, 0x0a, 0x04, 0x69, 0x6e, 0x66, 0x6f, 0x18, 0x01, 0x20,
@@ -844,8 +816,8 @@ var file_api_article_v1_article_proto_rawDesc = []byte{
 	0x69, 0x63, 0x6c, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x18, 0x0d, 0x20, 0x01, 0x28, 0x03,
 	0x52, 0x0d, 0x41, 0x72, 0x74, 0x69, 0x63, 0x6c, 0x65, 0x53, 0x74, 0x61, 0x74, 0x75, 0x73, 0x12,
 	0x1a, 0x0a, 0x08, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x74, 0x18, 0x0e, 0x20, 0x01, 0x28,
-	0x03, 0x52, 0x08, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x55,
-	0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x74, 0x18, 0x0f, 0x20, 0x01, 0x28, 0x03, 0x52, 0x08, 0x55,
+	0x09, 0x52, 0x08, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x74, 0x12, 0x1a, 0x0a, 0x08, 0x55,
+	0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x74, 0x18, 0x0f, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x55,
 	0x70, 0x64, 0x61, 0x74, 0x65, 0x41, 0x74, 0x32, 0xab, 0x04, 0x0a, 0x07, 0x41, 0x72, 0x74, 0x69,
 	0x63, 0x6c, 0x65, 0x12, 0x7f, 0x0a, 0x0d, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65, 0x41, 0x72, 0x74,
 	0x69, 0x63, 0x6c, 0x65, 0x12, 0x24, 0x2e, 0x61, 0x70, 0x69, 0x2e, 0x61, 0x72, 0x74, 0x69, 0x63,
