# chainArt/api/category/v1/category_grpc.pb.go
@@ -1,0 +1,183 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v3.15.5
+// source: api/category/v1/category.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
+
+const (
+	Category_CreateCategory_FullMethodName = "/api.category.v1.Category/CreateCategory"
+	Category_GetCategory_FullMethodName    = "/api.category.v1.Category/GetCategory"
+	Category_ListCategory_FullMethodName   = "/api.category.v1.Category/ListCategory"
+)
+
+// CategoryClient is the client API for Category service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+type CategoryClient interface {
+	CreateCategory(ctx context.Context, in *CreateCategoryRequest, opts ...grpc.CallOption) (*CreateCategoryReply, error)
+	GetCategory(ctx context.Context, in *GetCategoryRequest, opts ...grpc.CallOption) (*GetCategoryReply, error)
+	ListCategory(ctx context.Context, in *ListCategoryRequest, opts ...grpc.CallOption) (*ListCategoryReply, error)
+}
+
+type categoryClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewCategoryClient(cc grpc.ClientConnInterface) CategoryClient {
+	return &categoryClient{cc}
+}
+
+func (c *categoryClient) CreateCategory(ctx context.Context, in *CreateCategoryRequest, opts ...grpc.CallOption) (*CreateCategoryReply, error) {
+	out := new(CreateCategoryReply)
+	err := c.cc.Invoke(ctx, Category_CreateCategory_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *categoryClient) GetCategory(ctx context.Context, in *GetCategoryRequest, opts ...grpc.CallOption) (*GetCategoryReply, error) {
+	out := new(GetCategoryReply)
+	err := c.cc.Invoke(ctx, Category_GetCategory_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *categoryClient) ListCategory(ctx context.Context, in *ListCategoryRequest, opts ...grpc.CallOption) (*ListCategoryReply, error) {
+	out := new(ListCategoryReply)
+	err := c.cc.Invoke(ctx, Category_ListCategory_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// CategoryServer is the server API for Category service.
+// All implementations must embed UnimplementedCategoryServer
+// for forward compatibility
+type CategoryServer interface {
+	CreateCategory(context.Context, *CreateCategoryRequest) (*CreateCategoryReply, error)
+	GetCategory(context.Context, *GetCategoryRequest) (*GetCategoryReply, error)
+	ListCategory(context.Context, *ListCategoryRequest) (*ListCategoryReply, error)
+	mustEmbedUnimplementedCategoryServer()
+}
+
+// UnimplementedCategoryServer must be embedded to have forward compatible implementations.
+type UnimplementedCategoryServer struct {
+}
+
+func (UnimplementedCategoryServer) CreateCategory(context.Context, *CreateCategoryRequest) (*CreateCategoryReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method CreateCategory not implemented")
+}
+func (UnimplementedCategoryServer) GetCategory(context.Context, *GetCategoryRequest) (*GetCategoryReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetCategory not implemented")
+}
+func (UnimplementedCategoryServer) ListCategory(context.Context, *ListCategoryRequest) (*ListCategoryReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListCategory not implemented")
+}
+func (UnimplementedCategoryServer) mustEmbedUnimplementedCategoryServer() {}
+
+// UnsafeCategoryServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to CategoryServer will
+// result in compilation errors.
+type UnsafeCategoryServer interface {
+	mustEmbedUnimplementedCategoryServer()
+}
+
+func RegisterCategoryServer(s grpc.ServiceRegistrar, srv CategoryServer) {
+	s.RegisterService(&Category_ServiceDesc, srv)
+}
+
+func _Category_CreateCategory_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateCategoryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CategoryServer).CreateCategory(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Category_CreateCategory_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CategoryServer).CreateCategory(ctx, req.(*CreateCategoryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Category_GetCategory_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetCategoryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CategoryServer).GetCategory(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Category_GetCategory_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CategoryServer).GetCategory(ctx, req.(*GetCategoryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Category_ListCategory_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListCategoryRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CategoryServer).ListCategory(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Category_ListCategory_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CategoryServer).ListCategory(ctx, req.(*ListCategoryRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Category_ServiceDesc is the grpc.ServiceDesc for Category service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Category_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.category.v1.Category",
+	HandlerType: (*CategoryServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateCategory",
+			Handler:    _Category_CreateCategory_Handler,
+		},
+		{
+			MethodName: "GetCategory",
+			Handler:    _Category_GetCategory_Handler,
+		},
+		{
+			MethodName: "ListCategory",
+			Handler:    _Category_ListCategory_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/category/v1/category.proto",
+}
